--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@astrojs/tailwind": "^6.0.2",
     "@astrojs/vercel": "^8.0.4",
     "astro": "^5.13.7",
-    "chart.js": "^4.5.0"
+    "chart.js": "^4.5.0",
+    "resend": "^6.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
