--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^6.0.2",
     "astro": "^5.13.7",
-    "chart.js": "^4.5.0",
-    "resend": "^6.0.3"
+    "chart.js": "^4.5.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
